[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/sound_handler.gd" type="Script" id=1]
[ext_resource path="res://Audio/hurt01.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/shoot01.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/splash01.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/slime01.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/fall01.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/fall02.wav" type="AudioStream" id=7]

[node name="Node" type="Node" index="0"]

script = ExtResource( 1 )

[node name="HurtSound" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ShootSound" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 0.9
autoplay = false
mix_target = 0
bus = "Master"

[node name="SplashSound" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 4 )
volume_db = 5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="SlimeSound" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 5 )
volume_db = -12.0
pitch_scale = 0.95
autoplay = false
mix_target = 0
bus = "Master"

[node name="FallingSound" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="FallingSound02" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"


